# Hoed-example-project

./: Hoed-example-project.cabal  README.md  stack.yaml
src/: Example.hs
