name:                Hoed-example-project
version:             0.1.0.0
license:             BSD3
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  build-depends:       base >= 4.7 && < 5, Hoed >= 0.4.0 && < 1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MaartenFaddegon/Hoed-example-project
